<resources>
    <string name="app_name">SmartButler</string>
    <string name="text_setting">设置</string>
    <string name="tab_first">服务管家</string>
    <string name="tab_second">微信精选</string>
    <string name="tab_third">美女社区</string>
    <string name="tab_fourth">个人中心</string>
    <string name="text_startMain">进入主页</string>
    <string name="text_jump">跳过 ></string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="memorypwdwhat">记住密码</string>
    <string name="memorypwd">忘记密码?</string>
    <string name="fogetpassword">忘记密码</string>
    <string name="forgetpwd">邮箱找回</string>
    <string name="age">年龄</string>
    <string name="desc">简介</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="again">再输入一次</string>
    <string name="email">邮箱</string>
    <string name="emailtips">注册成功需要前往邮箱验证,否则无法登录!</string>
    <string name="changepwd">修改密码</string>
    <string name="oldpwd">旧密码</string>
    <string name="newpwd">新密码</string>
    <string name="againpwd">再次输入密码</string>
    <string name="login_now">正在登录...</string>
    <string name="zhineng">智能</string>
    <string name="jianyue">简约</string>
    <string name="qiangda">强大</string>
    <string name="edit_reference">编辑资料</string>
    <string name="name">姓名:</string>
    <string name="sex">性别:</string>
    <string name="ages">年龄:</string>
    <string name="descs">简介:</string>
    <string name="confirm_change">确定修改</string>
    <string name="wuliu">物流查询</string>
    <string name="guishudi">归属地查询</string>
    <string name="loginout">退出登录</string>
    <string name="camera">拍照</string>
    <string name="picture">从相册选择</string>
    <string name="cancel">取消</string>
    <string name="logistics">物流查询</string>
    <string name="phoneregion">归属地查询</string>
    <string name="comname">请输入快递公司名称</string>
    <string name="logisticsnum">请输入快递单号</string>
    <string name="select">查询</string>
    <string name="testcom">ht</string>
    <string name="testnum">70115017336876</string>
    <string name="phonenum">请输入手机号码</string>
    <string name="region">归属地</string>
    <string name="num0">0</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="numdel">DEL</string>
    <string name="numselect">查询</string>
    <string name="left">左边</string>
    <string name="right">右边</string>
    <string name="robot_input">请输入内容</string>
    <string name="send">发 送</string>
    <string name="tts_speak">语音播报</string>
    <string name="shortmsg">智能短信提醒</string>
    <string name="tts_tips">开启之后与服务管家对讲语音播报</string>
    <string name="shortmsg_tips">开启之后收到短信将弹框提示</string>
    <string name="update">检测版本</string>
    <string name="update_tips">检查是否有新版本提示下载</string>
    <string name="update_version">版本更新</string>
    <string name="download_tips">下载过程中请勿离开</string>
    <string name="scan">扫一扫</string>
    <string name="scan_tips">扫描二维码或者条形码</string>
    <string name="share_zxing">二维码分享</string>
    <string name="share_zxing_tips">把最美的自己分享给朋友吧</string>
    <string name="my_qrcode">我的二维码</string>
    <string name="mylocation">我的位置</string>
    <string name="mylocation_tips">自身位置尽在掌握</string>
    <string name="about_soft">关于软件</string>
    <string name="about_soft_tips">http://blog.csdn.net/jarchie520</string>
</resources>
