<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/et_comname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comname"
        android:text="@string/testcom" />

    <EditText
        android:id="@+id/et_logisticsnum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/logisticsnum"
        android:text="@string/testnum" />

    <Button
        android:id="@+id/btn_select"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_bg"
        android:text="@string/select"
        android:textColor="@color/white" />

    <ListView
        android:id="@+id/mListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:scrollbars="none"
        android:divider="@null"/>
</LinearLayout>