<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changepwd"
        android:textColor="@color/colorAccent"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/et_old"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/oldpwd"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/et_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newpwd"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/et_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/againpwd"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btn_changepwd"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/button_bg"
        android:text="@string/changepwd"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/forgetpwd"
        android:textColor="@color/colorAccent"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email" />

    <Button
        android:id="@+id/btn_forgetpwd"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/button_bg"
        android:text="@string/forgetpwd"
        android:textColor="@color/white" />
</LinearLayout>