<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="10dp">

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/button_whitebg"
        android:text="@string/camera"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/btn_picture"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_whitebg"
        android:text="@string/picture"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/button_whitebg"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent" />
</LinearLayout>